--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "vite": "^5.2.11"
   },
   "dependencies": {
-    "ol": "latest"
+    "ol": "latest",
+    "ol-layerswitcher": "^4.1.1"
   }
 }
