--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "ol": "latest",
-    "ol-layerswitcher": "^4.1.1"
+    "ol-layerswitcher": "^4.1.1",
+    "pg": "^8.11.5"
   }
 }
