--- a/.github/workflows/main_sibonsitek.yml
+++ b/.github/workflows/main_sibonsitek.yml
@@ -29,9 +29,11 @@ jobs:
           npm run test --if-present
 
       - name: Zip artifact for deployment
+        working-directory: ./my-app	
         run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
+        working-directory: ./my-app
         uses: actions/upload-artifact@v3
         with:
           name: node-app
